fix: Card Header spacing is wrong
refs: Fixes #20

--- a/src/scss/components/Card.scss
+++ b/src/scss/components/Card.scss
@@ -48,7 +48,7 @@
   align-items: center;
   gap: 1rem;
   width: 100%;
-  padding: 0.75rem;
+  padding: 0.75rem 1rem;
 
   .card__header__text {
     flex-grow: 1;
